--- a/luscii_patient_actions_sdk/example/android/app/build.gradle
+++ b/luscii_patient_actions_sdk/example/android/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id "com.android.application"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 def localProperties = new Properties()
@@ -42,7 +44,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "nl.digizorg.example"
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 26
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -55,6 +57,15 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+}
+
+dependencies {
+    implementation "com.google.dagger:hilt-android:2.51.1"
+    kapt "com.google.dagger:hilt-compiler:2.51.1"
+}
+
+kapt {
+    correctErrorTypes = true
 }
 
 flutter {
