--- a/luscii_patient_actions_sdk/example/android/app/build.gradle
+++ b/luscii_patient_actions_sdk/example/android/app/build.gradle
@@ -50,6 +50,10 @@ android {
         versionName flutterVersionName
     }
 
+    buildFeatures {
+        dataBinding = true
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
@@ -60,8 +64,8 @@ android {
 }
 
 dependencies {
-    implementation "com.google.dagger:hilt-android:2.51.1"
-    kapt "com.google.dagger:hilt-compiler:2.51.1"
+    implementation "com.google.dagger:hilt-android:2.55"
+    kapt "com.google.dagger:hilt-compiler:2.55"
 }
 
 kapt {
