--- a/luscii_patient_actions_sdk_android/android/build.gradle
+++ b/luscii_patient_actions_sdk_android/android/build.gradle
@@ -40,6 +40,10 @@ android {
         minSdkVersion 26
     }
 
+    buildFeatures {
+        dataBinding = true
+    }
+
     dependencies {
         implementation("com.luscii:sdk:0.3.18")
         implementation "com.google.dagger:hilt-android:2.55"
