--- a/luscii_patient_actions_sdk/example/.gitignore
+++ b/luscii_patient_actions_sdk/example/.gitignore
@@ -44,6 +44,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/android/app/.cxx
 
 # Fluttium related files
 .fluttium_*_launcher.dart
