--- a/luscii_patient_actions_sdk/example/android/app/build.gradle
+++ b/luscii_patient_actions_sdk/example/android/app/build.gradle
@@ -31,6 +31,7 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
@@ -64,8 +65,11 @@ android {
 }
 
 dependencies {
-    implementation "com.google.dagger:hilt-android:2.55"
+    implementation "com.google.dagger:hilt-android:2.56.2"
     kapt "com.google.dagger:hilt-compiler:2.55"
+    implementation 'androidx.window:window:1.3.0'
+    implementation 'androidx.window:window-java:1.3.0'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
 }
 
 kapt {
