--- a/luscii_patient_actions_sdk/example/.gitignore
+++ b/luscii_patient_actions_sdk/example/.gitignore
@@ -46,5 +46,5 @@ app.*.map.json
 /android/app/release
 /android/app/.cxx
 
-# Fluttium related files
-.fluttium_*_launcher.dart
+# Patrol related files
+patrol_*_runner.dart
