🚀 ci(workflow): improve iOS E2E test setup
Add verbose output and specify simulator UDID for E2E tests in the GitHub Actions workflow. Improves test reliability and debugging for iOS integration tests.

--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -100,10 +100,10 @@ jobs:
         # Start an iPhone simulator
         run: |
           UDID=$(xcrun xctrace list devices | grep "^iPhone" | awk '{gsub(/[()]/,""); print $NF}' | head -n 1)
-          echo $UDID
+          echo "Using simulator with UDID: $UDID"
           xcrun simctl boot "${UDID:?No Simulator with this name found}"
 
       - name: E2E Tests
         env:
           LUSCII_API_KEY: ${{ secrets.LUSCII_API_KEY }}
-        run: patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY
+        run: patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY --device $UDID --verbose
