🌈 style(ci): quote UDID in E2E test command
Wraps the UDID variable in quotes in the E2E test step to prevent issues with device names containing spaces or special characters.

--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -106,4 +106,4 @@ jobs:
       - name: E2E Tests
         env:
           LUSCII_API_KEY: ${{ secrets.LUSCII_API_KEY }}
-        run: patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY --device $UDID --verbose
+        run: patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY --device="$UDID" --verbose
