🚀 ci(workflow): set SIMULATOR_UDID env for E2E tests
Store the simulator UDID in the SIMULATOR_UDID environment variable and use it in the E2E test step to improve reliability and clarity.

--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -101,9 +101,10 @@ jobs:
         run: |
           UDID=$(xcrun xctrace list devices | grep "^iPhone" | awk '{gsub(/[()]/,""); print $NF}' | head -n 1)
           echo "Using simulator with UDID: $UDID"
+          echo "SIMULATOR_UDID=$UDID" >> $GITHUB_ENV
           xcrun simctl boot "${UDID:?No Simulator with this name found}"
 
       - name: E2E Tests
         env:
           LUSCII_API_KEY: ${{ secrets.LUSCII_API_KEY }}
-        run: patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY --device="$UDID" --verbose
+        run: patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY --device="${SIMULATOR_UDID}" --verbose
