--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -30,7 +30,7 @@ jobs:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
     with:
       flutter_channel: stable
-      flutter_version: 3.32.5
+      flutter_version: 3.32.6
       working_directory: luscii_patient_actions_sdk
 
 
@@ -82,7 +82,7 @@ jobs:
           working-directory: luscii_patient_actions_sdk/example
 
   ios:
-    runs-on: macos-latest
+    runs-on: macos-15
 
     defaults:
       run:
@@ -91,10 +91,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Select Xcode version
+        run: sudo xcode-select -s /Applications/Xcode_16.4.app
+
       - uses: subosito/flutter-action@v2
 
       - name: Install Patrol CLI
         run: flutter pub global activate patrol_cli
+
+      - name: Prepare iOS project
+        run: |
+          cd ios
+          pod install --repo-update
+          cd ..
 
       - name: Start Simulator
         # Start an iPhone simulator
