--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -99,6 +99,10 @@ jobs:
       - name: Install Patrol CLI
         run: flutter pub global activate patrol_cli
 
+      - name: Run Flutter Pub Get
+        run: |
+          flutter pub get
+
       - name: Prepare iOS project
         run: |
           cd ios
