🚀 ci(workflows): update iOS device env var in tests
Replace SIMULATOR_UDID with udid for iOS E2E test device selection in GitHub Actions workflow.

--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -78,7 +78,7 @@ jobs:
         with:
           api-level: 29
           script: patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY
-          
+
   ios:
     runs-on: macos-15
 
@@ -115,4 +115,4 @@ jobs:
       - name: E2E Tests
         env:
           LUSCII_API_KEY: ${{ secrets.LUSCII_API_KEY }}
-        run: patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY --device="${SIMULATOR_UDID}"
+        run: patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY --device="${udid}"
