🚀 ci(workflows): run integration tests from example dir
Update CI workflow to change working directory to 'example' before running integration tests, ensuring correct test execution context.

--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -77,7 +77,7 @@ jobs:
           LUSCII_API_KEY: ${{ secrets.LUSCII_API_KEY }}
         with:
           api-level: 29
-          script: patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY
+          script: cd example && patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY
 
   ios:
     runs-on: macos-15
