🔧 chore(ci): add GitHub Maven credentials to workflow
Include GITHUB_MAVEN_USERNAME and GITHUB_MAVEN_TOKEN in CI environment and update test script path. Add GitHub Maven repository with credentials to Gradle for Android example.

--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -75,9 +75,11 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         env:
           LUSCII_API_KEY: ${{ secrets.LUSCII_API_KEY }}
+          GITHUB_MAVEN_USERNAME: ${{ secrets.DIGIZORG_GITHUB_MAVEN_USERNAME }}
+          GITHUB_MAVEN_TOKEN: ${{ secrets.DIGIZORG_GITHUB_MAVEN_TOKEN }}
         with:
           api-level: 29
-          script: cd example && patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY
+          script: cd luscii_patient_actions_sdk/example && patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY
 
   ios:
     runs-on: macos-15
