🚀 ci(workflows): add Flutter pub get step
Add a step to run 'flutter pub get' in the CI workflow to ensure dependencies are installed before building and testing.

--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -56,6 +56,10 @@ jobs:
       - name: Install Patrol CLI
         run: flutter pub global activate patrol_cli
 
+      - name: Run Flutter Pub Get
+        run: |
+          flutter pub get
+
       - name: AVD Cache
         uses: actions/cache@v4
         id: avd-cache
