🚀 ci: enable workflows and update Flutter version
Uncomment and activate CI/CD workflows for all SDK packages. Update Flutter version to 3.32.6 and set minimum coverage to 15. Add --verbose flag to integration tests. Update Android build credentials in example project. Minor formatting improvements in Dart tests.

--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -83,7 +83,7 @@ jobs:
           GITHUB_MAVEN_TOKEN: ${{ secrets.DIGIZORG_GITHUB_MAVEN_TOKEN }}
         with:
           api-level: 29
-          script: cd luscii_patient_actions_sdk/example && patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY
+          script: cd luscii_patient_actions_sdk/example && patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY --verbose
 
   ios:
     runs-on: macos-15
