🚀 ci(workflows): update coverage and emulator config
Increase min_coverage thresholds for Android and iOS workflows to 90. Add x86_64 arch and google_apis target to Android emulator setup in main SDK workflow.

--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -31,6 +31,7 @@ jobs:
     with:
       flutter_channel: stable
       flutter_version: 3.32.6
+      min_coverage: 70
       working_directory: luscii_patient_actions_sdk
 
 
@@ -83,6 +84,8 @@ jobs:
           GITHUB_MAVEN_TOKEN: ${{ secrets.DIGIZORG_GITHUB_MAVEN_TOKEN }}
         with:
           api-level: 29
+          arch: x86_64
+          target: google_apis
           script: cd luscii_patient_actions_sdk/example && patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY --verbose
 
   ios:
