🚀 ci(android): remove quotes from API key env var
Update Android workflow to pass LUSCII_API_KEY without quotes, ensuring correct environment variable substitution during integration tests.

--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -86,7 +86,7 @@ jobs:
           api-level: 29
           arch: x86_64
           target: google_apis
-          script: cd luscii_patient_actions_sdk/example && patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY="$LUSCII_API_KEY" --verbose
+          script: cd luscii_patient_actions_sdk/example && patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY --verbose
 
   ios:
     runs-on: macos-15
