--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -36,7 +36,7 @@ jobs:
 
 
   android:
-    runs-on: ubuntu-latest
+    runs-on: macos-15
 
     defaults:
       run:
@@ -61,20 +61,8 @@ jobs:
         run: |
           flutter pub get
 
-      - name: AVD Cache
-        uses: actions/cache@v4
-        id: avd-cache
-        with:
-          path: |
-            ~/.android/avd/*
-            ~/.android/adb*
-          key: avd-29
-
-      - name: Enable KVM
-        run: |
-          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
-          sudo udevadm control --reload-rules
-          sudo udevadm trigger --name-match=kvm
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v3
 
       - name: E2E Tests
         uses: reactivecircus/android-emulator-runner@v2
@@ -84,7 +72,7 @@ jobs:
           GITHUB_MAVEN_TOKEN: ${{ secrets.DIGIZORG_GITHUB_MAVEN_TOKEN }}
         with:
           api-level: 29
-          arch: x86_64
+          arch: arm64-v8a
           target: google_apis
           script: cd luscii_patient_actions_sdk/example && patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY --verbose
 
