--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -36,7 +36,7 @@ jobs:
 
 
   android:
-    runs-on: macos-15
+    runs-on: macos-13
 
     defaults:
       run:
@@ -61,6 +61,9 @@ jobs:
         run: |
           flutter pub get
 
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
+
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
@@ -72,7 +75,7 @@ jobs:
           GITHUB_MAVEN_TOKEN: ${{ secrets.DIGIZORG_GITHUB_MAVEN_TOKEN }}
         with:
           api-level: 29
-          arch: arm64-v8a
+          arch: x86_64
           target: google_apis
           script: cd luscii_patient_actions_sdk/example && patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY --verbose
 
