--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -62,7 +62,7 @@ jobs:
           flutter pub get
 
       - name: Change wrapper permissions
-        run: chmod +x ./gradlew
+        run: chmod +x android/gradlew
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
