--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -36,7 +36,7 @@ jobs:
 
 
   android:
-    runs-on: macos-13
+    runs-on: ubuntu-latest
 
     defaults:
       run:
@@ -61,8 +61,20 @@ jobs:
         run: |
           flutter pub get
 
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v3
+      - name: AVD Cache
+        uses: actions/cache@v4
+        id: avd-cache
+        with:
+          path: |
+            ~/.android/avd/*
+            ~/.android/adb*
+          key: avd-29
+
+      - name: Enable KVM
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
 
       - name: E2E Tests
         uses: reactivecircus/android-emulator-runner@v2
