test: implement unit/integration tests (#19)
* test: implement unit/integration tests

* 🔧 chore(deps): update Flutter and Dart SDK versions

Bump Flutter version to 3.32.5 in CI workflow and update Dart SDK constraint to ^3.7.0 across all pubspec.yaml files for improved compatibility and latest features.

* 🌈 style(example): reformat code for readability

Reformats code in app_test.dart, test_bundle.dart, and main.dart for improved readability and consistency. No logic changes were made.

* 🔧 chore(pubspec): update Dart SDK to 3.8.1

Bump Dart SDK version from 3.7.0 to 3.8.1 across all pubspec.yaml files to ensure compatibility with the latest features and improvements.

* run dart format

* 🌈 style: apply formatting and trailing commas

Apply automated trailing commas and code formatting across Dart source, test, and analysis files for consistency. Also refactor multi-line constructors and method calls to single-line where possible. No logic changes introduced.

* 🚀 ci(workflow): improve iOS E2E test setup

Add verbose output and specify simulator UDID for E2E tests in the GitHub Actions workflow. Improves test reliability and debugging for iOS integration tests.

* 🌈 style(ci): quote UDID in E2E test command

Wraps the UDID variable in quotes in the E2E test step to prevent issues with device names containing spaces or special characters.

* 🚀 ci(workflow): set SIMULATOR_UDID env for E2E tests

Store the simulator UDID in the SIMULATOR_UDID environment variable and use it in the E2E test step to improve reliability and clarity.

* 🔧 chore(ci): update workflows and Flutter version

Comment out most workflow steps for ci, android, ios, and platform interface. Update Flutter version to 3.32.6 and macOS runner to macos-15 in luscii_patient_actions_sdk workflow. Add Xcode 16.4 selection and iOS project preparation steps.

* 🚀 ci(flutter): add flutter pub get step to workflow

Insert flutter pub get before preparing the iOS project to ensure all dependencies are instal

--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -30,12 +30,13 @@ jobs:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
     with:
       flutter_channel: stable
-      flutter_version: 3.24.0
+      flutter_version: 3.32.6
+      min_coverage: 70
       working_directory: luscii_patient_actions_sdk
 
 
   android:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     defaults:
       run:
@@ -46,12 +47,19 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           distribution: "temurin"
-          java-version: "11"
+          java-version: "21"
 
       - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.32.6'
+          channel: 'stable'
 
-      - name: Install Fluttium
-        run: flutter pub global activate fluttium_cli
+      - name: Install Patrol CLI
+        run: flutter pub global activate patrol_cli
+
+      - name: Run Flutter Pub Get
+        run: |
+          flutter pub get
 
       - name: AVD Cache
         uses: actions/cache@v4
@@ -62,25 +70,36 @@ jobs:
             ~/.android/adb*
           key: avd-29
 
-      - name: Cache AVD Snapshot
-        if: steps.avd-cache.outputs.cache-hit != 'true'
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 29
-          force-avd-creation: false
-          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
-          disable-animations: false
-          script: echo "Generated AVD snapshot for caching."
+      - name: Enable KVM
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
 
       - name: E2E Tests
         uses: reactivecircus/android-emulator-runner@v2
+        env:
+          LUSCII_API_KEY: ${{ secrets.LUSCII_API_KEY }}
+          GITHUB_MAVEN_USERNAME: ${{ secrets.DIGIZORG_GITHUB_MAVEN_USERNAME }}
+          GITHUB_MAVEN_TOKEN: ${{ secrets.DIGIZORG_GITHUB_MAVEN_TOKEN }}
         with:
-          api-level: 29
-          script: fluttium test flows/test_platform_name.yaml -d android
-          working-directory: luscii_patient_actions_sdk/example
+          api-level: 34
+          arch: x86_64
+          target: google_apis
+          script: cd luscii_patient_actions_sdk/example && patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY
+
+      - name: Upload Android Test Reports
+        uses: actions/upload-artifact@v4
+        if: always() # Upload reports even if tests fail
+        with:
+          name: android-test-reports
+          path: |
+            luscii_patient_actions_sdk/example/build/app/reports/
+            luscii_patient_actions_sdk/example/build/test-results/
+          retention-days: 30
 
   ios:
-    runs-on: macos-latest
+    runs-on: macos-15
 
     defaults:
       run:
@@ -89,17 +108,41 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Select Xcode version
+        run: sudo xcode-select -s /Applications/Xcode_16.4.app
+
       - uses: subosito/flutter-action@v2
 
-      - name: Install Fluttium
-        run: flutter pub global activate fluttium_cli
+      - name: Install Patrol CLI
+        run: flutter pub global activate patrol_cli
 
-      - name: Start Simulator
-        # Start an iPhone simulator
+      - name: Run Flutter Pub Get
         run: |
-          UDID=$(xcrun xctrace list devices | grep "^iPhone" | awk '{gsub(/[()]/,""); print $NF}' | head -n 1)
-          echo $UDID
-          xcrun simctl boot "${UDID:?No Simulator with this name found}"
+          flutter pub get
 
+      - name: Prepare iOS project
+        run: |
+          cd ios
+          pod install --repo-update
+          cd ..
+
+      - name: Set up iOS simulator
+        id: simulator
+        uses: futureware-tech/simulator-action@v4
+        with:
+          model: 'iPhone 16'
+      
       - name: E2E Tests
-        run: fluttium test flows/test_platform_name.yaml -d iPhone
+        env:
+          LUSCII_API_KEY: ${{ secrets.LUSCII_API_KEY }}
+        run: patrol test integration_test/app_test.dart --dart-define=LUSCII_API_KEY=$LUSCII_API_KEY --device="${{ steps.simulator.outputs.udid }}"
+
+      - name: Upload iOS Test Reports
+        uses: actions/upload-artifact@v4
+        if: always() # Upload reports even if tests fail
+        with:
+          name: ios-test-reports
+          path: |
+            luscii_patient_actions_sdk/example/build/ios_results*/
+            luscii_patient_actions_sdk/example/ios/test_output/
+          retention-days: 30
