--- a/.github/workflows/luscii_patient_actions_sdk_android.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk_android.yaml
@@ -21,6 +21,7 @@ jobs:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
     with:
       flutter_channel: stable
-      flutter_version: 3.24.0
+      flutter_version: 3.32.6
+      min_coverage: 90
       working_directory: luscii_patient_actions_sdk_android
 
