--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -34,7 +34,6 @@ jobs:
       min_coverage: 70
       working_directory: luscii_patient_actions_sdk
 
-
   android:
     runs-on: ubuntu-latest
 
@@ -51,11 +50,17 @@ jobs:
 
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.32.6'
-          channel: 'stable'
+          flutter-version: "3.32.6"
+          channel: "stable"
 
       - name: Install Patrol CLI
         run: flutter pub global activate patrol_cli
+
+      - name: 📦 Configure Pub Credentials
+        env:
+          CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
+        run: |
+          echo '$CLOUDSMITH_API_KEY' | flutter pub token add https://dart.cloudsmith.io/digizorg/default
 
       - name: Run Flutter Pub Get
         run: |
@@ -130,8 +135,8 @@ jobs:
         id: simulator
         uses: futureware-tech/simulator-action@v4
         with:
-          model: 'iPhone 16'
-      
+          model: "iPhone 16"
+
       - name: E2E Tests
         env:
           LUSCII_API_KEY: ${{ secrets.LUSCII_API_KEY }}
