--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -27,12 +27,20 @@ jobs:
       modified_files_only: false
 
   build:
-    uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
-    with:
-      flutter_channel: stable
-      flutter_version: 3.32.6
-      min_coverage: 70
-      working_directory: luscii_patient_actions_sdk
+    runs-on: ubuntu-latest
+    steps:
+      - name: 📦 Configure Pub Credentials
+        env:
+          CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
+        run: |
+          echo $CLOUDSMITH_API_KEY | flutter pub token add https://dart.cloudsmith.io/digizorg/default
+
+      - uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
+        with:
+          flutter_channel: stable
+          flutter_version: 3.32.6
+          min_coverage: 70
+          working_directory: luscii_patient_actions_sdk
 
   android:
     runs-on: ubuntu-latest
@@ -60,7 +68,7 @@ jobs:
         env:
           CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
         run: |
-          echo '$CLOUDSMITH_API_KEY' | flutter pub token add https://dart.cloudsmith.io/digizorg/default
+          echo $CLOUDSMITH_API_KEY | flutter pub token add https://dart.cloudsmith.io/digizorg/default
 
       - name: Run Flutter Pub Get
         run: |
