--- a/.github/workflows/luscii_patient_actions_sdk_android.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk_android.yaml
@@ -25,7 +25,7 @@ jobs:
         env:
           CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
         run: |
-          echo '$CLOUDSMITH_API_KEY' | flutter pub token add https://dart.cloudsmith.io/digizorg/default
+          echo $CLOUDSMITH_API_KEY | flutter pub token add https://dart.cloudsmith.io/digizorg/default
 
       - uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
         with:
