--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -26,21 +26,28 @@ jobs:
         .*/**/*.md
       modified_files_only: false
 
-  build:
+  setup:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.32.6"
+          channel: "stable"
       - name: 📦 Configure Pub Credentials
         env:
           CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
         run: |
           echo $CLOUDSMITH_API_KEY | flutter pub token add https://dart.cloudsmith.io/digizorg/default
 
-      - uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
-        with:
-          flutter_channel: stable
-          flutter_version: 3.32.6
-          min_coverage: 70
-          working_directory: luscii_patient_actions_sdk
+  build:
+    needs: setup
+    uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
+    with:
+      flutter_channel: stable
+      flutter_version: 3.32.6
+      min_coverage: 70
+      working_directory: luscii_patient_actions_sdk
 
   android:
     runs-on: ubuntu-latest
