--- a/.github/workflows/luscii_patient_actions_sdk_platform_interface.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk_platform_interface.yaml
@@ -17,23 +17,8 @@ on:
       - "luscii_patient_actions_sdk_platform_interface/**"
 
 jobs:
-  setup:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: "3.32.6"
-          channel: "stable"
-      - name: 📦 Configure Pub Credentials
-        env:
-          CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
-        run: |
-          echo $CLOUDSMITH_API_KEY | flutter pub token add https://dart.cloudsmith.io/digizorg/default
-
   build:
-    needs: setup
-    uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
+    uses: ./.github/workflows/flutter_package.yml
     with:
       flutter_channel: stable
       flutter_version: 3.32.6
