--- a/.github/workflows/flutter_package.yaml
+++ b/.github/workflows/flutter_package.yaml
@@ -59,6 +59,8 @@ on:
         type: string
         default: "!*"
     secrets:
+      CLOUDSMITH_API_KEY:
+        required: true
       ssh_key:
         required: false
 
@@ -91,7 +93,7 @@ jobs:
           ssh-private-key: ${{secrets.ssh_key}}
 
       - name: 📦 Configure Pub Credentials
-        if: ${{ secrets.CLOUDSMITH_API_KEY != '' }}
+        if: "${{ secrets.CLOUDSMITH_API_KEY != '' }}"
         env:
           CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
         run: |
