--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -27,12 +27,14 @@ jobs:
       modified_files_only: false
 
   build:
-    uses: ./.github/workflows/flutter_package.yml
+    uses: ./.github/workflows/flutter_package.yaml
     with:
       flutter_channel: stable
       flutter_version: 3.32.6
       min_coverage: 70
       working_directory: luscii_patient_actions_sdk
+    secrets:
+      CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
 
   android:
     runs-on: ubuntu-latest
