--- a/.github/workflows/flutter_package.yaml
+++ b/.github/workflows/flutter_package.yaml
@@ -93,9 +93,9 @@ jobs:
           ssh-private-key: ${{secrets.ssh_key}}
 
       - name: 📦 Configure Pub Credentials
-        if: "${{ secrets.CLOUDSMITH_API_KEY != '' }}"
         env:
           CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
+        if: env.CLOUDSMITH_API_KEY != null
         run: |
           echo $CLOUDSMITH_API_KEY | flutter pub token add https://dart.cloudsmith.io/digizorg/default
 
