fix: remove cloudsmith configuration to rely on pub.dev

--- a/luscii_patient_actions_sdk_android/pubspec.yaml
+++ b/luscii_patient_actions_sdk_android/pubspec.yaml
@@ -2,7 +2,6 @@ name: luscii_patient_actions_sdk_android
 description: Android implementation of the luscii_patient_actions_sdk plugin
 version: 0.2.0+1
 homepage: https://digizorg.app
-publish_to: https://dart.cloudsmith.io/digizorg/default/
 
 environment:
   sdk: ^3.8.1
@@ -20,9 +19,7 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  luscii_patient_actions_sdk_platform_interface:
-    hosted: https://dart.cloudsmith.io/digizorg/default/
-    version: ^0.2.0+1
+  luscii_patient_actions_sdk_platform_interface: ^0.2.0+1
 
 dev_dependencies:
   flutter_test:
