--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -27,14 +27,12 @@ jobs:
       modified_files_only: false
 
   build:
-    uses: ./.github/workflows/flutter_package.yaml
+    uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
     with:
       flutter_channel: stable
       flutter_version: 3.32.6
       min_coverage: 70
       working_directory: luscii_patient_actions_sdk
-    secrets:
-      CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
 
   android:
     runs-on: ubuntu-latest
@@ -57,12 +55,6 @@ jobs:
 
       - name: Install Patrol CLI
         run: flutter pub global activate patrol_cli
-
-      - name: 📦 Configure Pub Credentials
-        env:
-          CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
-        run: |
-          echo $CLOUDSMITH_API_KEY | flutter pub token add https://dart.cloudsmith.io/digizorg/default
 
       - name: Run Flutter Pub Get
         run: |
@@ -122,12 +114,6 @@ jobs:
 
       - name: Install Patrol CLI
         run: flutter pub global activate patrol_cli
-
-      - name: 📦 Configure Pub Credentials
-        env:
-          CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
-        run: |
-          echo $CLOUDSMITH_API_KEY | flutter pub token add https://dart.cloudsmith.io/digizorg/default
 
       - name: Run Flutter Pub Get
         run: |
