--- a/.github/workflows/luscii_patient_actions_sdk_platform_interface.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk_platform_interface.yaml
@@ -18,11 +18,9 @@ on:
 
 jobs:
   build:
-    uses: ./.github/workflows/flutter_package.yaml
+    uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
     with:
       flutter_channel: stable
       flutter_version: 3.32.6
       min_coverage: 15
       working_directory: luscii_patient_actions_sdk_platform_interface
-    secrets:
-      CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
