--- a/.github/workflows/pub_publish.yaml
+++ b/.github/workflows/pub_publish.yaml
@@ -18,12 +18,6 @@ jobs:
       - name: 🐦 Setup Flutter
         uses: subosito/flutter-action@v2
 
-      - name: 📦 Configure Pub Credentials
-        env:
-          CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
-        run: |
-          echo $CLOUDSMITH_API_KEY | flutter pub token add https://dart.cloudsmith.io/digizorg/default
-
       - name: 📦 Publish Packages
         run: |
           # Define the package directories in the order they should be published
@@ -43,4 +37,6 @@ jobs:
             dart pub publish --force
             cd .. || exit 1
             echo "✅ Published $package"
+            # Wait for a few seconds
+            sleep 15
           done
