--- a/luscii_patient_actions_sdk/pubspec.yaml
+++ b/luscii_patient_actions_sdk/pubspec.yaml
@@ -2,7 +2,6 @@ name: luscii_patient_actions_sdk
 description: Luscii Patient Actions SDK plugin
 version: 0.2.0+1
 homepage: https://digizorg.app
-publish_to: https://dart.cloudsmith.io/digizorg/default/
 
 environment:
   sdk: ^3.8.1
@@ -19,15 +18,9 @@ flutter:
 dependencies:
   flutter:
     sdk: flutter
-  luscii_patient_actions_sdk_android:
-    hosted: https://dart.cloudsmith.io/digizorg/default/
-    version: ^0.2.0+1
-  luscii_patient_actions_sdk_ios:
-    hosted: https://dart.cloudsmith.io/digizorg/default/
-    version: ^0.2.0+1
-  luscii_patient_actions_sdk_platform_interface:
-    hosted: https://dart.cloudsmith.io/digizorg/default/
-    version: ^0.2.0+1
+  luscii_patient_actions_sdk_android: ^0.2.0+1
+  luscii_patient_actions_sdk_ios: ^0.2.0+1
+  luscii_patient_actions_sdk_platform_interface: ^0.2.0+1
 
 dev_dependencies:
   flutter_test:
