--- a/luscii_patient_actions_sdk_android/android/build.gradle
+++ b/luscii_patient_actions_sdk_android/android/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id "com.android.library"
     id "kotlin-android"
     id 'kotlin-kapt'
-    id 'dagger.hilt.android.plugin'
+    id 'com.google.dagger.hilt.android'
 }
 
 group 'nl.digizorg'
@@ -45,10 +45,10 @@ android {
     }
 
     dependencies {
-        implementation("com.luscii:sdk:0.6.0")
-        implementation "com.google.dagger:hilt-android:2.57"
+        implementation("com.luscii:sdk:0.8.0")
+        implementation "com.google.dagger:hilt-android:2.57.1"
         implementation "androidx.fragment:fragment-ktx:1.8.6"
-        kapt "com.google.dagger:hilt-compiler:2.57"
+        kapt "com.google.dagger:hilt-compiler:2.57.1"
         testImplementation 'org.jetbrains.kotlin:kotlin-test'
         testImplementation 'org.mockito:mockito-core:5.12.0'
     }
