--- a/luscii_patient_actions_sdk_android/android/settings.gradle
+++ b/luscii_patient_actions_sdk_android/android/settings.gradle
@@ -1,6 +1,15 @@
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+    }
+}
+
 plugins {
-    id "com.android.library" version "7.3.0" apply false
+    id "com.android.library" version "8.9.1" apply false
     id "org.jetbrains.kotlin.android" version "2.1.0" apply false
+    id "com.google.dagger.hilt.android" version "2.57.1" apply false
 }
 
 rootProject.name = 'luscii_patient_actions_sdk_android'
