--- a/luscii_patient_actions_sdk/example/android/app/build.gradle
+++ b/luscii_patient_actions_sdk/example/android/app/build.gradle
@@ -26,7 +26,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace = "nl.digizorg.example"
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdk 36
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
