--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -111,6 +111,9 @@ jobs:
         run: sudo xcode-select -s /Applications/Xcode_16.4.app
 
       - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.35.5"
+          channel: "stable"
 
       - name: Install Patrol CLI
         run: flutter pub global activate patrol_cli
