--- a/.github/workflows/luscii_patient_actions_sdk.yaml
+++ b/.github/workflows/luscii_patient_actions_sdk.yaml
@@ -30,10 +30,9 @@ jobs:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
     with:
       flutter_channel: stable
-      flutter_version: 3.32.6
+      flutter_version: 3.35.5
       min_coverage: 70
       working_directory: luscii_patient_actions_sdk
-
 
   android:
     runs-on: ubuntu-latest
@@ -51,8 +50,8 @@ jobs:
 
       - uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.32.6'
-          channel: 'stable'
+          flutter-version: "3.35.5"
+          channel: "stable"
 
       - name: Install Patrol CLI
         run: flutter pub global activate patrol_cli
@@ -112,6 +111,9 @@ jobs:
         run: sudo xcode-select -s /Applications/Xcode_16.4.app
 
       - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: "3.35.5"
+          channel: "stable"
 
       - name: Install Patrol CLI
         run: flutter pub global activate patrol_cli
@@ -130,8 +132,8 @@ jobs:
         id: simulator
         uses: futureware-tech/simulator-action@v4
         with:
-          model: 'iPhone 16'
-      
+          model: "iPhone 16"
+
       - name: E2E Tests
         env:
           LUSCII_API_KEY: ${{ secrets.LUSCII_API_KEY }}
