--- a/luscii_patient_actions_sdk/example/android/app/build.gradle
+++ b/luscii_patient_actions_sdk/example/android/app/build.gradle
@@ -26,7 +26,7 @@ if (flutterVersionName == null) {
 
 android {
     namespace = "nl.digizorg.example"
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdk 36
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -75,8 +75,8 @@ android {
 }
 
 dependencies {
-    implementation "com.google.dagger:hilt-android:2.57"
-    kapt "com.google.dagger:hilt-compiler:2.57"
+    implementation "com.google.dagger:hilt-android:2.57.1"
+    kapt "com.google.dagger:hilt-compiler:2.57.1"
     implementation 'androidx.window:window:1.3.0'
     implementation 'androidx.window:window-java:1.3.0'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
