✨ feat(sdk): prepare initial public release
Add changelogs, licenses, and update pubspecs for all packages. Configure CI workflow for publishing to pub.dev and switch dependencies to published versions. This prepares the Luscii Patient Actions SDK and platform implementations for initial public release.

--- a/luscii_patient_actions_sdk/example/pubspec.yaml
+++ b/luscii_patient_actions_sdk/example/pubspec.yaml
@@ -27,6 +27,14 @@ dev_dependencies:
   patrol: ^3.17.0
   very_good_analysis: ^10.0.0
 
+dependency_overrides:
+  luscii_patient_actions_sdk_android:
+    path: ../../luscii_patient_actions_sdk_android
+  luscii_patient_actions_sdk_ios:
+    path: ../../luscii_patient_actions_sdk_ios
+  luscii_patient_actions_sdk_platform_interface:
+    path: ../../luscii_patient_actions_sdk_platform_interface
+
 flutter:
   uses-material-design: true
 
