--- a/luscii_patient_actions_sdk_platform_interface/pubspec.yaml
+++ b/luscii_patient_actions_sdk_platform_interface/pubspec.yaml
@@ -1,10 +1,12 @@
 name: luscii_patient_actions_sdk_platform_interface
 description: A common platform interface for the luscii_patient_actions_sdk plugin.
 version: 0.5.0+1
-publish_to: none
+repository: https://github.com/Luscii/luscii_patient_actions_sdk
+homepage: https://github.com/Luscii/luscii_patient_actions_sdk
 
 environment:
   sdk: ^3.9.0
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
