feat: initial public release (#33)
* ✨ feat(sdk): prepare initial public release

Add changelogs, licenses, and update pubspecs for all packages. Configure CI workflow for publishing to pub.dev and switch dependencies to published versions. This prepares the Luscii Patient Actions SDK and platform implementations for initial public release.

* ✨ feat(readme): Add readme and right repo

* ✨ feat(android): Update hilt and luscii sdk

* ✨ feat(changelog): Update 0.6.0 release to 0.6.0+1

* fix(pipeline): free android gh actions pipeline

* fix(pipeline): free android gh actions pipeline

--- a/luscii_patient_actions_sdk/example/pubspec.yaml
+++ b/luscii_patient_actions_sdk/example/pubspec.yaml
@@ -1,6 +1,6 @@
 name: luscii_patient_actions_sdk_example
 description: Demonstrates how to use the luscii_patient_actions_sdk plugin.
-version: 0.5.0+1
+version: 0.6.0+1
 publish_to: none
 
 environment:
@@ -26,6 +26,14 @@ dev_dependencies:
     sdk: flutter
   patrol: ^3.17.0
   very_good_analysis: ^10.0.0
+
+dependency_overrides:
+  luscii_patient_actions_sdk_android:
+    path: ../../luscii_patient_actions_sdk_android
+  luscii_patient_actions_sdk_ios:
+    path: ../../luscii_patient_actions_sdk_ios
+  luscii_patient_actions_sdk_platform_interface:
+    path: ../../luscii_patient_actions_sdk_platform_interface
 
 flutter:
   uses-material-design: true
