✨ feat: add getSelfcareActions for iOS and Android
Introduce getSelfcareActions API to retrieve self-care actions for authenticated users on both iOS and Android. Update platform interfaces, implementations, example app, and documentation. Bump versions and update dependencies to 0.7.0+1.

--- a/luscii_patient_actions_sdk/example/pubspec.yaml
+++ b/luscii_patient_actions_sdk/example/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^2.2.3
   luscii_patient_actions_sdk:
     # When depending on this package from a real application you should use:
     #   luscii_patient_actions_sdk: ^x.y.z
