🚀 ci(pipeline): update cspell lint command in YAML
Switch cspell invocation to use 'cspell lint' with explicit config and working directory. Improves consistency with project settings and ensures correct spell checking.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,7 +57,10 @@ stages:
       - bash: |
           set -euo pipefail
           npm i -g cspell
-          cspell "**/*.md" \
+          cd "$(System.DefaultWorkingDirectory)"
+          cspell lint \
+            --config ".github/cspell.json" \
+            "**/*.md" \
             --exclude "brick/**" \
             --exclude "**/build/**" \
             --exclude "**/.dart_tool/**"
